<resources>
    <string name="app_name">Lab2</string>
    <!--    <string name="produse_menu">Produse</string>-->
    <string name="cos_menu">Cos</string>
    <string name="settings_menu">Setari</string>
    <string name="user_name">No Name</string>
    <string name="sensors_menu">Senzori</string>
    <string name="cart_menu">Cos</string>
    <string name="title_activity_location">Map</string>
    <string name="camera_menu">Camera</string>

</resources>
