<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
<!--    <item android:id="@+id/products"-->
<!--        android:icon="@drawable/ic_launcher_foreground"-->
<!--        android:title="@string/cos_menu"-->
<!--        />-->
    <item android:id="@+id/cart"
        android:icon="@drawable/ic_launcher_background"
        android:title="@string/cart_menu" />
    <item android:id="@+id/settings"
        android:icon="@drawable/ic_launcher_background"
        android:title="@string/settings_menu" />
    <item android:id="@+id/sensors"
    android:icon="@drawable/ic_launcher_background"
    android:title="@string/sensors_menu" />
    <item android:id="@+id/location"
        android:icon="@drawable/ic_launcher_background"
        android:title="@string/title_activity_location" />
    <item android:id="@+id/camera"
        android:icon="@drawable/ic_launcher_background"
        android:title="@string/camera_menu" />
</menu>